--- a/src/css/share.css
+++ b/src/css/share.css
@@ -38,8 +38,8 @@ html{
 }
 
 body{
-  font-size: 1.5rem;
-  font-family: 'Noto Sans JP', sans-serif;
+  font-size: 1.6rem;
+  font-family: 'Noto Sans JP', sans-serif, 'PingFangSC-Regular';
   color: #131313;
 }
 a{
@@ -643,6 +643,7 @@ a{
   width: 2000px;
   height: 2970px;
   /* position: relative; */
+
 }
 ._PDF-name{
   text-align: center;
@@ -885,6 +886,9 @@ a{
     width: 16%;
   }
 
+  ._button-container{
+    padding: 60px 0 60px;
+  }
 
   ._error-message{
     text-align: center;
