ログインのクルクルとエラーメッセージの追加

--- a/src/css/share.css
+++ b/src/css/share.css
@@ -39,7 +39,7 @@ html{
 
 body{
   font-size: 1.6rem;
-  font-family: 'Noto Sans JP', sans-serif, 'PingFangSC-Regular';
+  font-family: 'Noto Sans JP', sans-serif, 'PingFang SC';
   color: #131313;
 }
 a{
