--- a/src/css/share.css
+++ b/src/css/share.css
@@ -71,6 +71,8 @@ a{
 ._base-s{
   width: 100%;
   margin: 0 auto;
+  /* background-color: #dae3f2; */
+  background-color: var(--bg);
   background-color: var(--blue);
   min-height: 100vh;
 }
@@ -640,20 +642,34 @@ a{
   top: 105%;
   left: 0;
   z-index: 100;
-  width: 2000px;
-  height: 2970px;
+  width: 1100px;
+  height: 1555px;
+  max-width: none;
+  max-height: none;
+  min-height: none;
+  padding: 5px;
 
   /* position: relative; */
+}
+
+#pdf-single{
+  position: fixed;
+  top: 105%;
+  left: 0;
+  z-index: 100;
 
 }
+
+
+
 ._PDF-name{
   text-align: center;
-  font-size: 36px;
-  margin:60px 0 60px;
+  font-size: 24px;
+  margin:20px 0 20px;
 }
 ._PDF-day{
   text-align: right;
-  font-size: 22px;
+  font-size: 15px;
 }
 ._PDF-table{
   width: 100%;
@@ -664,26 +680,26 @@ a{
   padding: 3px 0;
 }
 ._PDF-list{
-  height: 160px;
+  height: 90px;
 }
 ._PDF-text-ss{
-  font-size: 14px;
+  font-size: 7px;
 }
 ._PDF-text-s{
-  font-size: 18px;
+  font-size: 12px;
 }
 ._PDF-text-m{
-  font-size: 24px;
+  font-size: 15px;
 }
 ._PDF-text-l{
   font-weight: 700;
-  font-size: 36px;
+  font-size: 24px;
 }
 ._PDF-no{
-  width: 4%;
+  width: 3%;
 }
 ._PDF-title{
-  width: 20%;
+  width: 19%;
 }
 ._PDF-source{
   width: 6%;
@@ -695,16 +711,16 @@ a{
   width: 4%;
 }
 ._PDF-request{
-  width: 30%;
+  width: 32%;
   text-align: left;
   padding: 10px 10px;
 }
 ._PDF-output{
-  font-size: 24px;
+  font-size: 15px;
   margin-top: 10px;
 }
 ._PDF-output span{
-  margin-right: 40px;
+  margin-right: 30px;
 }
 ._PDF-bottom{
   position: absolute;
@@ -712,23 +728,30 @@ a{
   bottom:0;
 }
 ._PDF-note{
-  width: 100%;
-  height: 175px;
-  font-size: 22px;
-  padding: 20px;
-  box-sizing: border-box;
+  width: calc(100% - 34px);
+  height: 90px;
+  padding: 10px;
   border: 1px solid var(--black);
-  margin-bottom: 20px;
+  margin:5px 0 20px;
 }
 ._PDF-footer{
   position: relative;
   text-align: center;
   width: 100%;
-  height: 50px;
+  height: 30px;
+}
+._PDF-next{
+  display: block;
+  font-size: 15px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
 }
 ._PDF-page{
   display: block;
-  font-size: 20px;
+  font-size: 13px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -736,10 +759,10 @@ a{
   transform: translate(-50%, -50%);
 }
 ._PDF-logo{
-  width: 308px;
-  height: 50px;
+  width: 185px;
+  height: 30px;
   position: absolute;
-  right: 0;
+  right: 20px;
   top: 0;
 
 }
