ステージプロットの出力実装。 ヘルプの実装。

--- a/src/css/share.css
+++ b/src/css/share.css
@@ -150,6 +150,9 @@ a{
 ._marginSS{
   margin-bottom: 10px;
 }
+._marginSS-up{
+  margin-top: 10px;
+}
 ._marginS{
   margin-bottom: 20px;
 }
@@ -177,6 +180,10 @@ a{
   text-align: left;
   display: inline-block;
 }
+._explanation{
+  font-size: 1.3rem;
+}
+
 
 ._container{
   margin-bottom: 30px;
@@ -470,7 +477,14 @@ a{
 }
 
 
-
+._description{
+  font-size: 1.4rem;
+  text-align: justify;
+}
+._description-center{
+  text-align: center;
+  margin-bottom: 40px;
+}
 
 
 
@@ -487,6 +501,7 @@ a{
   margin: 0 auto;
   padding: 25px 0;
   display: flex;
+  position: relative;
 }
 ._link-icon{
   width: 70px;
@@ -496,7 +511,11 @@ a{
 ._link-box{
   width: calc(100% - 102px);
   margin:0 16px;
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 /* 説明文無し */
 ._link-p{
@@ -504,12 +523,19 @@ a{
   color: var(--blue);
   font-size: 1.8rem;
   font-weight: 600;
-  position: absolute;
+
+  text-align: center;
+}
+/* 説明文あり */
+._link-text-box{
+  width: 100%;
+  margin:0 16px;
+  position: relative;
   top: 50%;
+  /* left: 50%; */
   -webkit-transform: translate(0, -50%);
   transform: translate(0, -50%);
 }
-/* 説明文あり */
 ._link-title{
   width: 100%;
   color: var(--blue);
@@ -644,7 +670,62 @@ a{
 
 
 
-/* セットリストPDF用 */
+/* フロー説明 */
+._flow{
+  background-color: var(--white);
+  border-radius: 4px;
+}
+._flow-container{
+  width: calc(100% - 32px);
+  padding: 30px 0;
+  margin: 0 auto;
+}
+._flow-main-title{
+  font-size: 1.7rem;
+  color: var(--blue);
+  font-weight: 700;
+  margin: 0 0 20px;
+  text-align: center;
+}
+._flow-main-text{
+  margin: 0 0 30px;
+}
+._flow-sub-title{
+  font-size: 1.6rem;
+  color: var(--blue);
+  font-weight: 700;
+  margin: 20px 0 10px;
+  text-align: center;
+}
+._flow-box{
+  border: 1px solid var(--black);
+  text-align: center;
+}
+._flow-title{
+  width: 95%;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: var(--blue);
+  margin: 10px auto 0;
+}
+._flow-text{
+  width: 95%;
+  font-size: 1.4rem;
+  margin: 10px auto;
+}
+._flow-arrow{
+  display: block;
+  margin: 10px auto;
+  width: 30px;
+}
+
+
+
+
+
+
+
+/* セットリストPDF用 コンポーネントでも使っているのでここに記述*/
 
 ._pdf{
   position: fixed;
@@ -671,13 +752,24 @@ a{
 ._PDF-table{
   width: 100%;
   text-align: center;
+  position: absolute;
+  top: 110px;
+  left: 0;
+  
+}
+._PDF-table-line{
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 110px;
+  left: 0;
 }
 ._PDF-head{
   text-align: center;
   padding: 3px 0;
 }
 ._PDF-list{
-  height: 90px;
+  height: 95px;
 }
 ._PDF-text-ss{
   font-size: 7px;
@@ -714,7 +806,7 @@ a{
 }
 ._PDF-output{
   font-size: 15px;
-  margin-top: 10px;
+  margin-bottom: 55px;
 }
 ._PDF-output span{
   margin-right: 30px;
@@ -880,7 +972,7 @@ a{
   }
   
   ._content{
-    padding:50px 0 0;
+    padding:10px 0 0;
     max-width: 600px;
     height:auto;
     margin-bottom: 100px;
