--- a/src/css/share.css
+++ b/src/css/share.css
@@ -11,6 +11,7 @@
   --bg:#e9eef2;
   --white-line:#ededed;
   --yellow:#ded728;
+  --yellow-hi: #eceab6;
   --red:#a20000;
   --red-bg:#f9c7ca;
   --blue:#0069a2;
@@ -68,13 +69,14 @@ a{
   margin: 0 auto;
 }
 
+/* 青背景用 */
 ._base-s{
   width: 100%;
   margin: 0 auto;
-  /* background-color: #dae3f2; */
   background-color: var(--bg);
   background-color: var(--blue);
   min-height: 100vh;
+  padding: 0 0 30px;
 }
 ._content-s{
   width: 90%;
@@ -83,6 +85,19 @@ a{
   margin: 0 auto;
 }
 
+/* 白背景専用 */
+._base-w{
+  width: 100%;
+  margin: 0 auto;
+  background-color: var(--white);
+  min-height: 100vh;
+}
+._content-w{
+  width: 90%;
+  min-height: calc(100% - 50px);
+  padding:90px 0 0;
+  margin: 0 auto;
+}
 
 
 ._arrow{
@@ -109,6 +124,7 @@ a{
   outline: none;
   transition: 0.3s;
   margin: 0 auto;
+  cursor: pointer;
 }
 
 
@@ -127,6 +143,7 @@ a{
   width: 200px;
   transition: 0.3s;
   margin: 0 auto;
+  cursor: pointer;
 }
 
 
@@ -145,6 +162,7 @@ a{
   outline: none;
   transition: 0.3s;
   margin: 0 auto;
+  cursor: pointer;
 }
 
 ._marginSS{
@@ -742,8 +760,8 @@ a{
 
 ._PDF-name{
   text-align: center;
-  font-size: 24px;
-  margin:20px 0 20px;
+  font-size: 36px;
+  margin:30px 0 30px;
 }
 ._PDF-day{
   text-align: right;
@@ -753,7 +771,7 @@ a{
   width: 100%;
   text-align: center;
   position: absolute;
-  top: 110px;
+  top: 140px;
   left: 0;
   
 }
@@ -761,7 +779,7 @@ a{
   width: 100%;
   text-align: center;
   position: absolute;
-  top: 110px;
+  top: 140px;
   left: 0;
 }
 ._PDF-head{
@@ -780,9 +798,15 @@ a{
 ._PDF-text-m{
   font-size: 15px;
 }
+._PDF-text-ml{
+  font-size: 18px;
+}
 ._PDF-text-l{
-  font-weight: 700;
   font-size: 24px;
+}
+._PDF-text-xl{
+  font-weight: 700;
+  font-size: 30px;
 }
 ._PDF-no{
   width: 3%;
@@ -796,6 +820,9 @@ a{
 ._PDF-tune{
   width: 4%;
 }
+._PDF-tr{
+  font-size: 15px;
+}
 ._PDF-time{
   width: 4%;
 }
@@ -806,7 +833,7 @@ a{
 }
 ._PDF-output{
   font-size: 15px;
-  margin-bottom: 55px;
+  margin-bottom: 35px;
 }
 ._PDF-output span{
   margin-right: 30px;
@@ -953,7 +980,29 @@ a{
   margin-top: 5px;
 }
 
-
+/* 規約、ポリシー用 */
+.t_container{
+  margin-bottom: 40px;
+}
+.t_title{
+  font-size: 1.8rem;
+  margin-bottom: 10px;
+}
+.t_text{
+  line-height: 1.6;
+  margin-bottom: 5px;
+  text-align: justify;
+}
+.t_sub-title{
+  line-height: 1.6;
+  font-size: 1.5rem;
+  margin-left: 30px;
+  margin-bottom: 5px;
+  text-align: justify;
+}
+.t_mail{
+  color: var(--blue);
+}
 
 @media screen and (min-width:600px){
 
@@ -964,6 +1013,12 @@ a{
   /* PC、タブレットのみ有効 */
   ._PC{
     display: block;
+  }
+  ._base{
+
+  }
+  ._base-s{
+    padding: 0;
   }
 
   ._content-for-home{
@@ -976,7 +1031,7 @@ a{
     max-width: 600px;
     height:auto;
     margin-bottom: 100px;
-    min-height: calc(100vh - 450px);
+    min-height: calc(100vh - 410px);
   }
   
   ._content-s{
@@ -985,6 +1040,14 @@ a{
     height:auto;
     margin-bottom: 100px;
     min-height: calc(100vh - 360px);
+  }
+
+  ._content-w{
+    padding:10px 0 0;
+    max-width: 800px;
+    height:auto;
+    margin-bottom: 100px;
+    min-height: calc(100vh - 410px);
   }
 
   ._container{
