--- a/src/css/share.css
+++ b/src/css/share.css
@@ -76,7 +76,7 @@ a{
   background-color: var(--bg);
   background-color: var(--blue);
   min-height: 100vh;
-  padding: 0 0 30px;
+  padding: 0;
 }
 ._content-s{
   width: 90%;
@@ -487,6 +487,19 @@ a{
 ._multi-box-error{
   background-color: var(--red-bg);
 }
+/* 初期値も黒色にする場合 */
+._multi-select-black{
+  display: block;
+  width: 100%;
+  height: 45px;
+  box-sizing: border-box;
+  border: none;
+  color: var(--black);
+  background-color: rgba(0,0,0,0);
+}
+
+
+
 
 /* selectの選択後の色を指定。このclassはmixinで指定いている。使わなくなったけど */
 ._SELECT-COLOR{
@@ -613,6 +626,17 @@ a{
   color: var(--white);
   cursor: pointer;
 }
+._link-mini-yellow{
+  display: block;
+  text-align: center;
+  position: relative;
+  width: 100%;
+  height: 50px;
+  border-radius: 4px;
+  background-color: var(--yellow-hi);
+  color: var(--blue);
+  cursor: pointer;
+}
 ._link-mini-line-blue{
   display: block;
   text-align: center;
@@ -707,6 +731,7 @@ a{
 ._flow{
   background-color: var(--white);
   border-radius: 4px;
+  margin-bottom: 30px;
 }
 ._flow-container{
   width: calc(100% - 32px);
